2013-07-18  Paul Eggert  <eggert@cs.ucla.edu>

	* charset.c: Fix file descriptor leaks and errno issues.
	Include <errno.h>.
	(load_charset_map_from_file): Don't leak file descriptor on error.
	Use plain record_xmalloc since the allocation is larger than
	MAX_ALLOCA; that's simpler here.  Simplify test for exhaustion
	of entries.
	* eval.c (record_unwind_protect_nothing):
	* fileio.c (fclose_unwind):
	New functions.
	* lread.c (load_unwind): Remove.  All uses replaced by fclose_unwind.
	The replacement doesn't block input, but that no longer seems
	necessary.

2013-07-17  Paul Eggert  <eggert@cs.ucla.edu>

	* lread.c: Fix file descriptor leaks and errno issues.
	(Fload): Close some races that leaked fds or streams when 'load'
	was interrupted.
	(Fload, openp): Report error number of last nontrivial failure to open.
	ENOENT counts as trivial.
	* eval.c (do_nothing, clear_unwind_protect, set_unwind_protect_ptr):
	New functions.
	* fileio.c (close_file_unwind): No need to test whether FD is nonnegative,
	now that the function is always called with a nonnegative arg.
	* lisp.h (set_unwind_protect_ptr, set_unwind_protect_int): Remove.
	All uses replaced with ...
	(clear_unwind_protect, set_unwind_protect_ptr): New decls.

	A few more minor file errno-reporting bugs.
	* callproc.c (Fcall_process):
	* doc.c (Fsnarf_documentation):
	* fileio.c (Frename_file, Fadd_name_to_file, Fmake_symbolic_link):
	* process.c (set_socket_option):
	Don't let a constructor trash errno.
	* doc.c: Include <errno.h>.

2013-07-16  Juanma Barranquero  <lekktu@gmail.com>

	* w32fns.c (unwind_create_tip_frame): Fix declaration.

2013-07-16  Paul Eggert  <eggert@cs.ucla.edu>

	Fix w32 bug with call-process-region (Bug#14885).
	* callproc.c (Fcall_process_region): Pass nil, not "/dev/null",
	to Fcall_process when the input is empty.  This simplifies the
	code a bit.  It makes no difference on POSIXish platforms but
	apparently it fixes a bug on w32.
